# LevenDictChecker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: english_dictionary.parquet
src/enan456.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/levendictchecker/: levendictchecker.py  pull_data.py
