[build-system]
requires = ["setuptools>=61.0","pandas>=1.3.0","Levenshtein>=0.20.9"]
build-backend = "setuptools.build_meta"

[project]
name = "LevenDictChecker_enan332"
version = "0.0.1"
authors = [
  { name="Enan Srivastava", email="contact@enan.dev" },
]
description = "This is a Python utility for searching all dictionary words and comparing them to a user input string using the Levenshtein distance algorithm. It returns a list of full words that are within a certain distance from the input string."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Enan456/LevenDictChecker"
"Bug Tracker" = "https://github.com/Enan456/LevenDictChecker/issues"